--- a/themes/adminLTE/assets/alba2/main.css
+++ b/themes/adminLTE/assets/alba2/main.css
@@ -1,3 +1,9 @@
+span.not-set {
+    color: #f00;
+}
+/**
+ * =BREADCRUMB
+ */ 
 .right-side > .content-header {
     padding: 20px 15px 10px 20px;
 }
@@ -6,12 +12,62 @@
     top: 0;
     left: 0;
     padding-left: 10px;
-    background: none repeat scroll 0% 0% #FBFBFB;
+    background: #fbfbfb;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
     border-radius: 0;
     width: 100%;
 }
-
+/**
+ * =INNER-CONTENT
+ */ 
 div#inner-content {
     margin-top: -20px;
 }
+/**
+ * =GRID-VIEW
+ */
+div.grid-view table thead th {
+    background: #fff;
+}
+div.grid-view table thead th:first-child { /* serial column */
+    width: 1%;
+    white-space: nowrap;
+}
+div.grid-view thead td {
+    background: #ececec;
+}
+div.grid-view td.grid-actions { /* actions */
+    width: 1%;
+    white-space: nowrap;
+}
+/**
+ * =DETAILS-VIEW
+ */
+table.detail-view {
+}
+table.detail-view th {
+    width: 20%;
+    background: #F3F4F5;
+}
+table.detail-view td {
+    background: #fff !important;
+}
+
+/**
+ * =FORM
+ */
+div#inner-content form {
+    border-top: 2px solid #3c8dbc;
+    position: relative;
+    background: #fff;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    /**/
+    padding: 20px;
+    width: 60%;
+}
+div#inner-content form button[type='submit']{
+    margin-top: 50px;
+}
+
