--- a/themes/adminLTE/assets/alba2/main.css
+++ b/themes/adminLTE/assets/alba2/main.css
@@ -1,5 +1,24 @@
-span.not-set {
-    color: #f00;
+.not-set {
+	color: #c55;
+	font-style: italic;
+}
+.footer {
+	height: 60px;
+	background-color: #f5f5f5;
+	border-top: 1px solid #ddd;
+	padding-top: 20px;
+}
+.hint-block {
+	display: block;
+	margin-top: 5px;
+	color: #999;
+}
+.error-summary {
+	color: #a94442;
+	background: #fdf7f7;
+	border-left: 3px solid #eed3d7;
+	padding: 10px 20px;
+	margin: 0 0 15px 0;
 }
 /**
  * =BREADCRUMB
@@ -26,22 +45,52 @@ div#inner-content {
 /**
  * =GRID-VIEW
  */
-div.grid-view table thead th {
+div.grid-view table th {
     background: #fff;
+    white-space: nowrap;
 }
 div.grid-view thead td {
     background: #ececec;
 }
-div.grid-view th.grid-actions { /* actions */
-    width: 7%;
+div.grid-view thead th.grid-object-actions { /* actions */
+    width: 7% !important;
     white-space: nowrap;
+}
+/* add sorting icons to gridview sort links */
+a.asc:after, a.desc:after {
+	position: relative;
+	top: 1px;
+	display: inline-block;
+	font-family: 'Glyphicons Halflings';
+	font-style: normal;
+	font-weight: normal;
+	line-height: 1;
+	padding-left: 5px;
+}
+a.asc:after {
+	content: /*"\e113"*/ "\e151";
+}
+a.desc:after {
+	content: /*"\e114"*/ "\e152";
+}
+.sort-numerical a.asc:after {
+	content: "\e153";
+}
+.sort-numerical a.desc:after {
+	content: "\e154";
+}
+.sort-ordinal a.asc:after {
+	content: "\e155";
+}
+.sort-ordinal a.desc:after {
+	content: "\e156";
 }
 /**
  * =DETAILS-VIEW
  */
 table.detail-view {
 }
-table.detail-view th {
+table.detail-view tbody th {
     width: 20%;
     background: #F3F4F5;
 }
@@ -66,4 +115,11 @@ div#inner-content form {
 div#inner-content form button[type='submit']{
     margin-top: 50px;
 }
-
+/**
+ * BTN
+ */
+.btn {
+	-webkit-box-shadow: 1px 1px 3px #808080 !important;
+	-moz-box-shadow: 1px 1px 3px #808080 !important;
+	box-shadow: 1px 1px 3px #808080 !important;
+}
